<resources>
    <string name="app_name">football</string>
    <string name="search">Search</string>
    <string-array name="nama_liga">
        <item>Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian SerieA</item>
        <item>Spanish Laliga</item>
        <item>American Mayor League</item>
        <item>Portugeuese Premiera Liga</item>
        <item>Australian League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string-array name="id_liga">
        <item>4328</item>
        <item>4484</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4395</item>
        <item>4396</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_kicker">Goal Kicker</string>
    <string name="red_card">Red Card</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="awayimage">awayimage</string>
    <string name="homeimage">homeImage</string>
    <string name="team_name_away">team name away</string>
    <string name="imageteamaway">imageTeamAway</string>
    <string name="pemisah">:</string>
    <string name="team_name_home">team name home</string>
    <string name="imagehometeam">imageHomeTeam</string>
    <string name="imageevent">imageEvent</string>
    <string name="favorites">favorites</string>
</resources>